--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -28,4 +28,4 @@ jobs:
         run: npx playwright install
 
       - name: Run Tests
-        run: npx playwright test --headed --project=chromium  # or: npx playwright test
+        run: npx playwright test --headed  # or: npx playwright test
